# au-computer-graphics

./: README.md
ext/assimp-3.3.1/lib/Debug/: assimp-vc140-mt.exp  assimp-vc140-mt.lib  zlibstaticd.lib
ext/assimp-3.3.1/lib/Release/: assimp-vc140-mt.exp  assimp-vc140-mt.lib  zlibstatic.lib
hw1/: CMakeLists.txt  common.h  main.cpp  tex.cpp  tex.h
hw1/content/: tex.ppm  tex2.ppm
hw1/shaders/: hw1.glslfs  hw1.glslvs
hw2/: CMakeLists.txt  box.cpp  controls.cpp  main.cpp  main.h  obj.cpp  tex.cpp
hw2/shaders/: box.glslfs  box.glslvs  obj.glslfs  obj.glslvs
hw3/: CMakeLists.txt  controls.cpp  gbuffer.cpp  lbuffer.cpp  lights.cpp  main.cpp  main.h  obj.cpp  quad.cpp  quad2.cpp  shader.cpp  shader.h  sphere.cpp
hw3/shaders/: combine.glslfs  combine.glslvs  gbuffer.glslfs  gbuffer.glslvs  light.glslfs  light.glslvs  sphere.glslfs
